[package]
name = "bitmap_type_tracer"
version = "1.0.0"
edition = "2021"

[profile.release]
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
opt-level = 3

[dependencies]
image = "0.23.14"
serde = { version = "1.0", features = [] }
serde_json = "1.0"
serde_derive = { version = "1.0", features = [] }
