[package]
name = "bitmap_type_tracer"
authors = ["tolik518"]
version = "1.0.0"
edition = "2021"
rust-version = "1.65"
description = "bitmap_type_trace is a utility tool to generate images from font bitmaps with customizable configurations"
readme = "README_text_only.md"
repository="https://github.com/tolik518/bitmap_type_tracer"
license = "MIT OR Apache-2.0 OR copyleft-next-0.3.1 OR CC-BY-4.0"
keywords = ["bitmap", "font", "demoscene", "typography", "bitmap-font"]
categories = ["parser-implementations", "multimedia::images", "command-line-utilities"]
exclude = ["examples", "README.md", "logo.png", "output.png", ".gitignore"]
publish = true

[profile.release]
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
opt-level = 3
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.

[dependencies]
image = "0.23.14"
serde = { version = "1.0", features = [] }
serde_json = "1.0"
serde_derive = { version = "1.0", features = [] }
locale_config = "0.3"
once_cell = { version = "1.8", features = [] }
